overwrite with nico's code

--- a/explore.html
+++ b/explore.html
@@ -1,42 +1,43 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Explore | EKcodecamp </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Explore | Thaigram</title>
 </head>
 
 <body>
+
     <header class="header">
         <div class="header__wrapper">
-            <a href="feed.html">
-                <img class="header__insta" src="images/instaimg.png" />
+            <a href="feed.html" class="header__link">
+                <img src="images/logo.png" class="header__logo" />
             </a>
-            <form class="header__form">
-                <input type="search" placeholder="search" class="header__input-search" />
-            </form>
-            <ul class="header__list">
-                <li class="header__list-icon">
-                    <a href="explore.html" class="header_list-icon-link">
+            <input type="search" placeholder="Search" class="header__input" />
+            <ul class="header__icon-list">
+                <li class="header__icon">
+                    <a href="explore.html" class="header__icon-link">
                         <i class="fa fa-compass fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="#" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="#" class="header__icon-link">
                         <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="profile.html" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="profile.html" class="header__icon-link">
                         <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
         </div>
     </header>
+
 
     <main class="explore">
         <ul class="explore__user-list">
@@ -64,42 +65,59 @@
                     <button class="explore__btn">Follow</button>
                 </div>
             </li>
+            <li class="explore__user">
+                <div class="explore__column">
+                    <img src="images/avatar.jpg" class="explore__avatar">
+                    <div class="explore__info">
+                        <span class="explore__username">serranoarevalo</span>
+                        <span class="explore__full-name">Nicolás Serrano Arévalo</span>
+                    </div>
+                </div>
+                <div class="explore__column">
+                    <button class="explore__btn">Follow</button>
+                </div>
+            </li>
         </ul>
     </main>
-    <footer class="footer">
-        <nav class="footer__nav">
-            <ul class="footer__list">
-                <li class="footer__list-item">
-                    <a href="">about us</a>
+    <!-- Footer -->
+    <footer class=" footer ">
+        <nav class="footer__navigation ">
+            <ul class="footer__list ">
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">About us</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">support</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Support</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">blog</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Blog</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">press</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Press</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">api</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">API</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">jobs</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Jobs</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">privacy</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Privacy</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">terms</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Terms</a>
                 </li>
-                <li class="footer__list-item">
-                    <a href="">directory</a>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Directory</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Language</a>
                 </li>
             </ul>
         </nav>
-        <span class="footer__copyright">©2018 EKcodecamp</span>
+        <span class="footer__copyright ">© 2018 thaigram</span>
     </footer>
+
 </body>
 
 </html>
