--- a/feed.html
+++ b/feed.html
@@ -5,33 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Feed | EKcodecamp </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Feed | Thaigram</title>
 </head>
 
 <body>
+
     <header class="header">
         <div class="header__wrapper">
-            <a href="feed.html">
-                <img class="header__insta" src="images/instaimg.png" />
+            <a href="feed.html" class="header__link">
+                <img src="images/logo.png" class="header__logo" />
             </a>
-            <form class="header__form">
-                <input type="search" placeholder="search" class="header__input-search" />
-            </form>
-            <ul class="header__list">
-                <li class="header__list-icon">
-                    <a href="explore.html" class="header_list-icon-link">
+            <input type="search" placeholder="Search" class="header__input" />
+            <ul class="header__icon-list">
+                <li class="header__icon">
+                    <a href="explore.html" class="header__icon-link">
                         <i class="fa fa-compass fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="#" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="#" class="header__icon-link">
                         <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="profile.html" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="profile.html" class="header__icon-link">
                         <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -39,18 +38,18 @@
         </div>
     </header>
 
-
+    <!-- This are the COLUMNS -->
     <main class="feed">
         <section class="photos">
             <article class="photo">
                 <header class="photo__header">
                     <img src="images/avatar.jpg" class="photo__avatar" />
-                    <div class="photo__header-info">
-                        <span class="photo__username">meatseagree</span>
-                        <span class="photo__place">Chiangmai</span>
+                    <div class="photo__info">
+                        <span class="photo__owner">ina hur</span>
+                        <span class="photo__place">Chiang Mai, Thailand</span>
                     </div>
                 </header>
-                <img src="images/feedphoto.jpg" class="photo__file" />
+                <img src="images/feedPhoto.jpg" class="photo__file" />
                 <div class="photo__feedback">
                     <div class="photo__actions">
                         <div class="photo__action-column">
@@ -61,60 +60,145 @@
                             <i class="fa fa-bookmark-o fa-lg"></i>
                         </div>
                     </div>
-                    <div class="photo__bottom">
-                        <span class="photo__likes">51 likes</span>
-                        <ul class="photo__comments">
-                            <li class="photo__comment">
-                                <span class="photo__comment-author">
-                                    EKK
-                                </span>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </li>
-                        </ul>
-                        <span class="photo__timestamp">12 hours ago</span>
-                        <div class="photo__make-comment">
-                            <textarea placeholder="Add a comment.."></textarea>
-                            <i class="fa fa-ellipsis-h "></i>
+                    <span class="photo__likes">51 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                    </ul>
+                    <span class="photo__timestamp">12 hours ago</span>
+                    <div class="photo__make-comment">
+                        <textarea placeholder="Add a comment.."></textarea>
+                        <i class="fa fa-ellipsis-h "></i>
+                    </div>
+                </div>
+            </article>
+            <article class="photo">
+                <header class="photo__header">
+                    <img src="images/avatar.jpg" class="photo__avatar" />
+                    <div class="photo__info">
+                        <span class="photo__owner">ina hur</span>
+                        <span class="photo__place">Chiang Mai, Thailand</span>
+                    </div>
+                </header>
+                <img src="images/feedPhoto.jpg" class="photo__file" />
+                <div class="photo__feedback">
+                    <div class="photo__actions">
+                        <div class="photo__action-column">
+                            <i class="fa fa-heart-o fa-lg"></i>
+                            <i class="fa fa-comment-o fa-lg"></i>
                         </div>
+                        <div class="photo__action-column">
+                            <i class="fa fa-bookmark-o fa-lg"></i>
+                        </div>
+                    </div>
+                    <span class="photo__likes">51 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                    </ul>
+                    <span class="photo__timestamp">12 hours ago</span>
+                    <div class="photo__make-comment">
+                        <textarea placeholder="Add a comment.."></textarea>
+                        <i class="fa fa-ellipsis-h "></i>
+                    </div>
+                </div>
+            </article>
+            <article class="photo">
+                <header class="photo__header">
+                    <img src="images/avatar.jpg" class="photo__avatar" />
+                    <div class="photo__info">
+                        <span class="photo__owner">ina hur</span>
+                        <span class="photo__place">Chiang Mai, Thailand</span>
+                    </div>
+                </header>
+                <img src="images/feedPhoto.jpg" class="photo__file" />
+                <div class="photo__feedback">
+                    <div class="photo__actions">
+                        <div class="photo__action-column">
+                            <i class="fa fa-heart-o fa-lg"></i>
+                            <i class="fa fa-comment-o fa-lg"></i>
+                        </div>
+                        <div class="photo__action-column">
+                            <i class="fa fa-bookmark-o fa-lg"></i>
+                        </div>
+                    </div>
+                    <span class="photo__likes">51 likes</span>
+                    <ul class="photo__comments">
+                        <li class="photo__comment">
+                            <span class="photo__comment-author">
+                                nicolas
+                            </span>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </li>
+                    </ul>
+                    <span class="photo__timestamp">12 hours ago</span>
+                    <div class="photo__make-comment">
+                        <textarea placeholder="Add a comment.."></textarea>
+                        <i class="fa fa-ellipsis-h "></i>
                     </div>
                 </div>
             </article>
         </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer ">
+        <nav class="footer__navigation ">
+            <ul class="footer__list ">
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">About us</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Support</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Blog</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Press</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">API</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Jobs</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Privacy</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Terms</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Directory</a>
+                </li>
+                <li class="footer__list-item ">
+                    <a href="# " class="footer__link ">Language</a>
+                </li>
+            </ul>
+        </nav>
+        <span class="footer__copyright ">© 2018 thaigram</span>
+    </footer>
 
-        <footer class="footer">
-            <nav class="footer__nav">
-                <ul class="footer__list">
-                    <li class="footer__list-item">
-                        <a href="">about us</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">support</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">blog</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">press</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">api</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">jobs</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">privacy</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">terms</a>
-                    </li>
-                    <li class="footer__list-item">
-                        <a href="">directory</a>
-                    </li>
-                </ul>
-            </nav>
-            <span class="footer__copyright">©2018 EKcodecamp</span>
-        </footer>
 </body>
 
 </html>
