--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Log In | EKcodecamp </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Log In | Thaigram</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <form action="feed.html" method="get" class="login__form">
                     <input class="login__input" name="username" type="text" accept="" placeholder="Username" required />
                     <input class="login__input" name="password" type="password" placeholder="Password" required />
-                    <input class="login__input login__button" type="submit" value="Log In" />
+                    <input class="login__input" type="submit" value="Log In" />
                 </form>
                 <span>or</span>
                 <a href="#" class="login__link">
@@ -39,10 +39,10 @@
                 <span>Get the app.</span>
                 <div class="login__app-stores">
                     <a class="login__app-store" target="_blank " href="https://itunes.apple.com/app/instagram/id389801252 ">
-                        <img src="images/ios.png ">
+                        <img src="images/ios.png">
                     </a>
                     <a class="login__app-store" target="_blank " href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26utm_medium%3Dbadge ">
-                        <img src="images/android.png ">
+                        <img src="images/android.png">
                     </a>
                 </div>
             </div>
@@ -50,38 +50,41 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-        <nav class="footer__nav">
+        <nav class="footer__navigation">
             <ul class="footer__list">
                 <li class="footer__list-item">
-                    <a href="">about us</a>
+                    <a href="#" class="footer__link">About us</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">support</a>
+                    <a href="#" class="footer__link">Support</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">blog</a>
+                    <a href="#" class="footer__link">Blog</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">press</a>
+                    <a href="#" class="footer__link">Press</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">api</a>
+                    <a href="#" class="footer__link">API</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">jobs</a>
+                    <a href="#" class="footer__link">Jobs</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">privacy</a>
+                    <a href="#" class="footer__link">Privacy</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">terms</a>
+                    <a href="#" class="footer__link">Terms</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">directory</a>
+                    <a href="#" class="footer__link">Directory</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__link">Language</a>
                 </li>
             </ul>
         </nav>
-        <span class="footer__copyright">©2018 EKcodecamp</span>
+        <span class="footer__copyright">© 2018 thaigram</span>
     </footer>
 
 </body>
