--- a/profile.html
+++ b/profile.html
@@ -5,76 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Profile | EKcodecamp </title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Profile | Thaigram</title>
 </head>
 
 <body>
+
     <header class="header">
+
         <div class="header__wrapper">
-            <a href="feed.html">
-                <img class="header__insta" src="images/instaimg.png" />
+            <a href="feed.html" class="header__link">
+                <img src="images/logo.png" class="header__logo" />
             </a>
-            <form class="header__form">
-                <input type="search" placeholder="search" class="header__input-search" />
-            </form>
-            <ul class="header__list">
-                <li class="header__list-icon">
-                    <a href="explore.html" class="header_list-icon-link">
+            <input type="search" placeholder="Search" class="header__input" />
+            <ul class="header__icon-list">
+                <li class="header__icon">
+                    <a href="explore.html" class="header__icon-link">
                         <i class="fa fa-compass fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="#" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="#" class="header__icon-link">
                         <i class="fa fa-heart-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="header__list-icon">
-                    <a href="profile.html" class="header_list-icon-link">
+                <li class="header__icon">
+                    <a href="profile.html" class="header__icon-link">
                         <i class="fa fa-user-o fa-lg" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
         </div>
+
     </header>
 
-    <span>profile</span>
-
+    <!-- This are the COLUMNS -->
+    <main>
+        profile
+    </main>
+    <!-- Footer -->
     <footer class="footer">
-        <nav class="footer__nav">
+        <nav class="footer__navigation">
             <ul class="footer__list">
                 <li class="footer__list-item">
-                    <a href="">about us</a>
+                    <a href="#" class="footer__link">About us</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">support</a>
+                    <a href="#" class="footer__link">Support</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">blog</a>
+                    <a href="#" class="footer__link">Blog</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">press</a>
+                    <a href="#" class="footer__link">Press</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">api</a>
+                    <a href="#" class="footer__link">API</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">jobs</a>
+                    <a href="#" class="footer__link">Jobs</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">privacy</a>
+                    <a href="#" class="footer__link">Privacy</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">terms</a>
+                    <a href="#" class="footer__link">Terms</a>
                 </li>
                 <li class="footer__list-item">
-                    <a href="">directory</a>
+                    <a href="#" class="footer__link">Directory</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer__link">Language</a>
                 </li>
             </ul>
         </nav>
-        <span class="footer__copyright">©2018 EKcodecamp</span>
+        <span class="footer__copyright">© 2018 thaigram</span>
     </footer>
+
 </body>
 
 </html>
